# BasicsDjango

./: .gitignore  README.MD  main.py  pyproject.toml
src/: path.py
