[project]
name = "basicsdjango"
version = "0.1.0"
description = ""
authors = [
    {name = "kirill",email = "kirill48108@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "load-dotenv (>=0.1.0,<0.2.0)",
    "requests (>=2.32.5,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "logging (>=0.4.9.6,<0.5.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "patch (>=1.16,<2.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "pytest-cov (>=6.2.1,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.lint.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.17.1"
flake8 = "^7.3.0"

[tool.black]
# Максимальная длина строки
line-length = 119
# Файлы, которые не нужно форматировать
exclude = '''
(
  /(
      \.eggs         # Исключить несколько общих каталогов
    | \.git          # в корне проекта
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | dist
  )/
 )
'''

[tool.isort]
# максимальная длина строки
line_length = 119

